vlib/v/checker/tests/struct_field_with_any_type_err.vv
struct My_type {
	fld any
}

fn main() {
	a := My_type{}
	println(a)
}
